--- a/languages/mj-update-history-ja.po
+++ b/languages/mj-update-history-ja.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MJ Update History\n"
 "POT-Creation-Date: 2018-02-15 18:47+0900\n"
-"PO-Revision-Date: 2018-02-15 19:47+0900\n"
+"PO-Revision-Date: 2018-03-01 21:07+0900\n"
 "Last-Translator: minoji\n"
 "Language-Team: minoji\n"
 "Language: ja\n"
@@ -59,6 +59,10 @@ msgstr "旧バージョン"
 #: lib/table.php:191
 msgid "New Version"
 msgstr "新バージョン"
+
+#: lib/table.php:201
+msgid "User Name"
+msgstr "ユーザー名"
 
 #: lib/table.php:273
 msgid "All Type"
